set( gloox_SRCS adhoc.cpp
amp.cpp
annotations.cpp
base64.cpp
bookmarkstorage.cpp
capabilities.cpp
chatstatefilter.cpp
clientbase.cpp
client.cpp
component.cpp
compressionzlib.cpp
connectionhttpproxy.cpp
connectionsocks5proxy.cpp
connectiontcpbase.cpp
connectiontcpclient.cpp
connectiontcpserver.cpp
dataformbase.cpp
dataform.cpp
dataformfield.cpp
dataformitem.cpp
dataformreported.cpp
delayeddelivery.cpp
disco.cpp
dns.cpp
error.cpp
flexoff.cpp
gloox.cpp
gpgencrypted.cpp
gpgsigned.cpp
inbandbytestream.cpp
instantmucroom.cpp
iq.cpp
jid.cpp
lastactivity.cpp
logsink.cpp
md5.cpp
message.cpp
messageeventfilter.cpp
messagefilter.cpp
messagesession.cpp
mucmessagesession.cpp
mucroom.cpp
mutex.cpp
nonsaslauth.cpp
oob.cpp
parser.cpp
prep.cpp
presence.cpp
privacyitem.cpp
privacymanager.cpp
privatexml.cpp
pubsubmanager.cpp
pubsubnode.cpp
registration.cpp
rosteritem.cpp
rostermanager.cpp
search.cpp
sha.cpp
simanager.cpp
siprofileft.cpp
socks5bytestream.cpp
socks5bytestreammanager.cpp
socks5bytestreamserver.cpp
stanza.cpp
stanzaextensionfactory.cpp
subscription.cpp
tag.cpp
tlsdefault.cpp
tlsgnutlsbase.cpp
tlsgnutlsclientanon.cpp
tlsgnutlsclient.cpp
tlsgnutlsserveranon.cpp
tlsopenssl.cpp
tlsschannel.cpp
uniquemucroom.cpp
util.cpp
vcard.cpp
vcardmanager.cpp
vcardupdate.cpp
xdelayeddelivery.cpp )

add_library( gloox SHARED ${gloox_SRCS} )
include_directories( ${gloox_SOURCE_DIR} )
